// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model Message {
  id        Int      @default(autoincrement()) @id
  email     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  mailboxes Mailbox  @relation(fields: [mailboxId], references: [id])
  mailboxId Int
}

model Mailbox {
  id        Int       @default(autoincrement()) @id
  email     String    @unique
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  user      User?     @relation(fields: [userId], references: [id])
  userId    Int
  messages  Message[]
}

model User {
  id        Int       @default(autoincrement()) @id
  email     String    @unique
  name      String
  password  String
  mailboxes Mailbox[]
}