@startuml mailSlurpDB

!define TRANSACTION CAE7F2

entity users as "users\nユーザー" <<T,TRANSACTION>> {
  + userId number(generated) [PK]
  --
  name VARCHAR(255)
  password TEXT
  email VARCHAR(255)
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}

entity mailboxes as "mailboxes\nメールボックス" <<T,TRANSACTION>> {
  + mailboxId number(generated) [PK]
  --
  userId number [FK] 
  email VARCHAR(255)
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}

entity messages as "messages\nメッセージ" <<T,TRANSACTION>> {
  + messageId INT(10) [PK]
  --
  mailboxId number [FK]
  message TEXT
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}

users ||--o{ mailboxes
mailboxes ||--o{ messages


@enduml